--- a/content/introduction.tex
+++ b/content/introduction.tex
@@ -2,9 +2,9 @@
 
 \chapter{Introduction\label{chap:introduction}}
 
-Modern software development is characterized by high demands for quality, robustness, and maintainability of applications. In this context, testing has become an essential part of the development process, with unit tests playing a key role in ensuring the proper functioning of individual system components. Testing is not merely about detecting bugs, but also to provide confidence that the software meets its functional and non-functional requirements and can withstand changes throughout its lifecycle. Although unit testing brings significant benefits, its effectiveness is often limited by the complexity of input data preparation.
+Modern software development is characterized by high demands for quality, robustness, and maintainability of applications. In this context, testing has become an essential part of the development process, with unit tests playing a key role in ensuring the proper functioning of individual system components. Testing is not merely about detecting bugs, but also to provide confidence that the software meets its functional and non-functional requirements and can withstand changes throughout its lifecycle. As mentioned in the book \cite{Khorikov2020Jan} Vladimir Khorikov testing helps to reduce the phenomenon called software entropy and leads to increased productivity. Although unit testing brings significant benefits, its effectiveness is often limited by the complexity of input data preparation.
 
-The preparation of test data represents one of the most significant challenges in the writing of tests. For simple scenarios, the required data can often be created directly within the test. However, for more complex scenarios, data preparation may require significant time and effort. This process can involve initializing complex structures, simulating dependencies, communicating with services, or generating realistic test scenarios. The result is tests that are often complicated, less readable, and harder to maintain. Such challenges can make testing a burden for developers rather than a facilitator of their work.
+The preparation of test data represents one of the most significant challenges in the writing of tests. For simple scenarios, the required data can often be created directly within the test. However, for more complex scenarios, data preparation may require significant time and effort\cite{Meszaros2007Jan}. This process can involve initializing complex structures, simulating dependencies, communicating with services, or generating realistic test scenarios. The result is tests that are often complicated, less readable, and harder to maintain. Such challenges can make testing a burden for developers rather than a facilitator of their work.
 
 In practice, it is often necessary to handle cases where tests share common data preparation requirements but differ in specifics, such as particular inputs or expected outputs. Although modern testing frameworks provide tools to simplify data preparation processes, their support is often limited to basic scenarios. However, there is potential for the development of comprehensive methodologies that facilitate the systematic and efficient processing of test data, together with the potential for reuse in different evaluations.
 
@@ -12,7 +12,7 @@ Imagine a scenario where an application contains dozens or hundreds of unit test
 
 An important aspect of effective testing is also the ability to dynamically modify and adapt data for different testing scenarios. For example, tests may need to simulate various system states or test different application configurations. Without appropriate tools, adapting data for these purposes can be challenging, resulting in a reduced scope of scenarios covered and limited error detection capabilities. Extending existing testing frameworks with mechanisms for managing and pre-preparing data offers not only practical advantages for developers, but also the potential to improve the quality of the resulting software.
 
-Another motivation for developing this extension is the need to integrate testing into modern development processes, such as continuous integration and deployment. In such scenarios, unit tests must be not only accurate, but also fast and reliable. Automating data preparation can significantly reduce the time required to run tests and eliminate the risk of errors that could arise from manual setup.
+Another motivation for the development of this work is the need to integrate testing into modern development processes, such as continuous integration and deployment. In such scenarios, unit tests must be not only accurate, but also fast and reliable. Automating data preparation can significantly reduce the time required to run tests and eliminate the risk of errors that could arise from manual setup.
 
 Developers also often face the challenge of ensuring that their tests are repeatable and deterministic. Repeatability means that a test's outcome is consistent regardless of how many times it is run. If tests depend on unpredictable factors, such as external data sources or randomly generated values, identifying the cause of failures can be difficult. An automated system for managing test data can address this issue by allowing precise definition and control of inputs for each test.
 
