--- a/main.bib
+++ b/main.bib
@@ -173,10 +173,84 @@
 	pages = {145--164},
 	year = {2007},
 	month = jan,
-	date = {2007-01-01},
 	urldate = {2025-01-01},
 	issn = {0949-877X},
 	publisher = {Springer-Verlag},
 	doi = {10.1007/s00778-006-0028-8},
 	keywords = {Database Management}
 }
+
+
+@book{Meszaros2007Jan,
+	author = {Meszaros, Gerard},
+	title = {{xUnit Test Patterns: Refactoring Test Code}},
+	year = {2007},
+	month = jan,
+	urldate = {2025-03-07},
+	isbn = {978-0-13149505-0},
+	publisher = {Addison-Wesley},
+	url = {https://www.amazon.com/xUnit-Test-Patterns-Refactoring-Code/dp/0131495054}
+}
+
+@article{Kim2021Jul,
+	author = {Kim, Dong Jae and Chen, Tse-Hsun (Peter) and Yang, Jinqiu},
+	title = {{The secret life of test smells - an empirical study on test smell evolution and maintenance}},
+	journal = {Empir. Software Eng.},
+	volume = {26},
+	number = {5},
+	pages = {100--47},
+	year = {2021},
+	month = jul,
+	urldate = {2025-03-07},
+	issn = {1573-7616},
+	publisher = {Springer US},
+	doi = {10.1007/s10664-021-09969-1},
+	keywords = {Software Engineering/Programming and Operating Systems, Programming Languages, Compilers, Interpreters}
+}
+
+@book{Gamma1994,
+	author = {Gamma, E. and Helm, R. and Johnson, R. and Vlissides, J.},
+	title = {{Design Patterns}},
+	year = {1994},
+	urldate = {2025-03-08},
+	isbn = {978-0-32170069-8},
+	publisher = {Pearson Education},
+	url = {https://books.google.cz/books?id=6oHuKQe3TjQC&printsec=frontcover&hl=cs#v=snippet&q=builder%20pattern&f=false}
+}
+
+@book{freeman2009growing,
+  title={Growing object-oriented software, guided by tests},
+  author={Freeman, Steve and Pryce, Nat},
+  year={2009},
+  publisher={Pearson Education}
+}
+
+@book{Khorikov2020Jan,
+	author = {Khorikov, Vladimir},
+	title = {{Unit Testing Principles, Practices, and Patterns: Effective testing styles, patterns, and reliable automation for unit testing, mocking, and integration testing with examples in C{\#}}},
+	year = {2020},
+	month = jan,
+	isbn = {978-1-61729627-7},
+	publisher = {Manning},
+}
+@book{Martin2008Aug,
+	author = {Martin, Robert C.},
+	title = {{Clean Code: A Handbook of Agile Software Craftsmanship}},
+	year = {2008},
+	month = aug,
+	urldate = {2025-03-08},
+	isbn = {978-0-13235088-4},
+	publisher = {Pearson},
+	url = {https://www.amazon.com/Clean-Code-Handbook-Software-Craftsmanship/dp/0132350882}
+}
+
+@article{hooda2015software,
+  title={Software test process, testing types and techniques},
+  author={Hooda, Itti and Chhillar, Rajender Singh},
+  journal={International Journal of Computer Applications},
+  volume={111},
+  number={13},
+  year={2015},
+  publisher={Citeseer}
+}
+
