--- a/main.tex
+++ b/main.tex
@@ -77,11 +77,11 @@
 
 \conditionalClearPage
 
-\input{src/abstract_en.tex}
+%\input{src/abstract_en.tex}
 
 \conditionalClearPage
 
-\input{src/abstrakt_cz.tex}
+%\input{src/abstrakt_cz.tex}
 
 %% --------------------------------------------------------------
 %% |                        Abbreviations                       |
@@ -122,29 +122,29 @@
 \input{content/preliminaries.tex}
 \input{content/framework_design.tex}
 \input{content/implementation.tex}
-\input{content/experiments_evaluation.tex}
-\input{content/user_guide.tex}
-\input{content/discussion.tex}
-\input{content/conclusion.tex}
+%\input{content/experiments_evaluation.tex}
+%\input{content/user_guide.tex}
+%\input{content/discussion.tex}
+%\input{content/conclusion.tex}
 
 %% ----------------------------Template--------------------------
 %% --------------------------------------------------------------
 %% |                        introduction                        |
 %% --------------------------------------------------------------
 
-\input{src/introduction.tex}
+%\input{src/introduction.tex}
 
 %% --------------------------------------------------------------
 %% |                How to write thesis in LaTeX                |
 %% --------------------------------------------------------------
 
-\input{src/how_to_write_thesis.tex}
+%\input{src/how_to_write_thesis.tex}
 
 %% --------------------------------------------------------------
 %% |                         Conclusion                         |
 %% --------------------------------------------------------------
 
-\input{src/conclusion.tex}
+%\input{src/conclusion.tex}
 
 %% --------------------------------------------------------------
 %% |                         References                         |
@@ -164,6 +164,6 @@
 \renewcommand{\thechapter}{A}
 \renewcommand\chaptername{Appendix A}
 
-\chapter{Appendix A}
+%\chapter{Appendix A}
 
 \end{document}
