--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -5,9 +5,15 @@
 \acro{CTU}[CTU]{Czech Technical University}
 \acro{BDD}[BDD]{Behavior-Driven Development}
 \acro{BOA}[BOA]{Business Objective Action}
+\acro{TDD}[TDD]{Test-Driven Development}
 \acro{WPF}[WPF]{Windows Presentation Foundation}
 \acro{WinUI}[WinUI]{Windows UI Library}
 \acro{MAUI}[MAUI]{Multi-platform App UI}
+\acro{CI/CT}[CI/CT]{Continuous Integration and Testing}
+\acro{CI/CD}[CI/CD]{Continuous Integration and Continuous Delivery}
+\acro{EF}[EF]{Entity Framework}
+\acro{ORM}[ORM]{Object Relational Mapper}
+\acro{DI}[DI]{Dependency Injection}
 
 \acro{API}[API]{Application Programming Interface}
 \acro{DOF}[DOF]{degree-of-freedom}
