--- a/src/document_setup.tex
+++ b/src/document_setup.tex
@@ -152,6 +152,10 @@
 
 
 
+
+
+
+
 %% | ------------------------ biblatex ------------------------ |
 
 \usepackage[backend=bibtex,defernumbers=true,style=ieee,sorting=ydnt,sortcites=true]{biblatex}
@@ -239,6 +243,7 @@
 \newcommand{\figvspace}{\vspace{-1em}}
 
 % referencing
+\newcommand{\refchap}[1]{Chap.~\ref{#1}}
 \newcommand{\reffig}[1]{Fig.~\ref{#1}}
 \newcommand{\reflst}[1]{Lst.~\ref{#1}}
 \newcommand{\refalg}[1]{Alg.~\ref{#1}}
